Fix spacing problem.

--- a/client/src/components/MainContent/MainContent.css
+++ b/client/src/components/MainContent/MainContent.css
@@ -1,5 +1,6 @@
-.container {
-  margin: 5%;
+.main-container {
+  padding: 5%;
+  margin: 0;
 }
 
 .main-title {
