--- a/client/src/components/PeopleMenu/PeopleMenu.css
+++ b/client/src/components/PeopleMenu/PeopleMenu.css
@@ -1,10 +1,7 @@
 
-.container {
+.people-container {
     margin: 0;
     padding: 5%;
-    height: 100%;
-
-
 }
 
 .home-btn {
